howl_helpdir = $(datadir)/howl/help
howl_help_DATA = address.html address-summary.html index.html overall.html discovery.html discovery-summary.html salt.html salt-summary.html txt_rec-summary.html txt_rec.html txt_rec_iter-summary.html txt_rec_iter.html txt_rec_str_iter-summary.html txt_rec_str_iter.html
man8_MANS	=	@HOWL_MAN_PAGES@
man_MANS		=
EXTRA_DIST	= address.html address-summary.html index.html overall.html discovery.html discovery-summary.html salt.html salt-summary.html txt_rec-summary.html txt_rec.html txt_rec_iter-summary.html txt_rec_iter.html txt_rec_str_iter-summary.html txt_rec_str_iter.html @HOWL_MAN_PAGES@
