DIST_SOURCES	= 	About.cpp About.h CHowlExplorerBar.cpp CHowlExplorerBar.h FTP.cpp FTP.h HowlExplorerBar.def HowlExplorerBar.rc HowlExplorerBar.rgs IHowlExplorerBar.cpp IHowlExplorerBar.h Makefile.am StdAfx.cpp StdAfx.h cold.ico ftp.ico logo.bmp regsvr32.trg rend.ico resource.h
INCLUDES			=	-I$(top_srcdir)/include/
